kustomization/graphql-service.yaml
# graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
spec:
  selector:
    app: graphql
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
