kustomization/opa-service.yaml
# opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
spec:
  selector:
    app: opa
  ports:
  - protocol: TCP
    port: 9191
    targetPort: 9191
